# BiasBed

./: LICENSE  README.md  setup.cfg
biasedbed/: config.yaml  run.py
biasedbed/algorithms/: abstract_algorithm.py  algorithms.py
biasedbed/algorithms/Debiased/: algorithm.py  config.yaml
biasedbed/algorithms/Debiased/utils/: AdaIN.py
biasedbed/algorithms/ERM/: algorithm.py  config.yaml  sweep.yaml
biasedbed/algorithms/InformativeDropout/: algorithm.py  config.yaml
biasedbed/algorithms/InformativeDropout/utils/: infodrop.py
biasedbed/algorithms/SagNet/: algorithm.py  config.yaml  sweep.yaml
biasedbed/algorithms/pAdaIN/: algorithm.py  config.yaml
biasedbed/algorithms/pAdaIN/utils/: padain.py  resnet.py
biasedbed/datasets/: abstract_dataloader.py  datasets.py
biasedbed/datasets/CueConflict/: dataloader.py
biasedbed/datasets/DeepAug/: config.yaml  dataloader.py  dataloader_wrapper.py
biasedbed/datasets/Edge/: dataloader.py
biasedbed/datasets/ImageNet1k/: dataloader.py
biasedbed/datasets/ImageNetStylized/: config.yaml  dataloader.py
biasedbed/datasets/Silhouette/: dataloader.py
biasedbed/datasets/Sketch/: dataloader.py
biasedbed/mappings/: mappings.py
biasedbed/sweeping/: launch_sweep.py  launcher.py  sweep.py  sweep.yaml
biasedbed/testing/: config.yaml  test.py
biasedbed/training/: train.py  trainer.py
