[metadata]
name = biasedbed
version = 0.0.1
description = Package for bias evaluation of neural networks

[options]
install_requires =
    ffcv~=0.0.3rc1
    matplotlib~=3.5.2
    numpy~=1.22.4
    omegaconf~=2.2.2
    torch~=1.12.0
    torchmetrics~=0.9.3
    torchvision~=0.13.0
    tqdm~=4.64.0
    cupy~=11.0.0
    opencv-python~=4.6.0
    numba~=0.56.0
    wandb~=0.13.0

#     pytorch
#     python_version > "3.10"
packages = find:

[options.packages.find]
exclude=biasedbed.datasets.*.data

[options.entry_points]
console_scripts =
    biasedbed = biasedbed.run:main